# talent-plan

./: .gitignore  README.md  Rust High Performance (2018).epub
actix-web/simple-auth-server/: Cargo.toml  readme.md
actix-web/simple-auth-server/src/: main.rs
building-blocks/actix21/: Cargo.toml
building-blocks/actix21/src/: main.rs
building-blocks/agent-client/: Cargo.toml
building-blocks/agent-client/src/: main.rs
building-blocks/agent-server/: Cargo.toml
building-blocks/agent-server/src/: main.rs
building-blocks/async_futures/: Cargo.toml
building-blocks/async_futures/src/: main.rs
building-blocks/bb1/: Cargo.toml
building-blocks/bb1/src/: cli.yml  lib.rs  main.rs  mov.rs
building-blocks/bb2/: Cargo.toml
building-blocks/bb2/src/: error.rs  kv.rs  lib.rs  main.rs
building-blocks/bb21/: Cargo.toml
building-blocks/bb21/src/: error.rs  lib.rs  main.rs
building-blocks/bb22/: Cargo.toml
building-blocks/bb22/src/: main.rs
building-blocks/bb23/: Cargo.toml
building-blocks/bb23/src/: error.rs  kv.rs  lib.rs  main.rs
building-blocks/bb24/: Cargo.toml
building-blocks/bb24/src/: main.rs
building-blocks/c_server/: Cargo.toml  README.md
building-blocks/docker_sock_tcp_raw/: Cargo.toml
building-blocks/docker_sock_tcp_raw/src/: client.rs  main.rs  utils.rs
building-blocks/docker_sock_tcp_raw/src/api/: containers.rs  images.rs  mod.rs  rawreq.rs  version.rs
building-blocks/examples/: Cargo.toml  README.md
building-blocks/examples/src/: async_ex1.rs  double_server.rs  echo.rs  log_facade.rs  read_exact_write_all.rs  redis-server.rs  spawn.rs
building-blocks/future_calc/: Cargo.toml
building-blocks/future_calc/src/: main.rs
building-blocks/helloworld_future_display/: Cargo.toml
building-blocks/helloworld_future_display/src/: main.rs
building-blocks/nc_client/: Cargo.toml
building-blocks/nc_client/src/: main.rs
building-blocks/rust_ping/: Cargo.toml
building-blocks/rust_ping/src/: main.rs
building-blocks/rust_sync/: Cargo.toml
building-blocks/rust_sync/src/: main.rs
building-blocks/tcp_client/: Cargo.toml
building-blocks/tcp_client/src/: main.rs
building-blocks/tcp_server/: Cargo.toml
building-blocks/tcp_server/src/: main.rs
building-blocks/tokio-helloworld/: Cargo.toml
building-blocks/tokio-helloworld/src/: main.rs
building-blocks/tokio-read-exact/: Cargo.toml
building-blocks/tokio-read-exact/src/: main.rs
building-blocks/tokio_chats/: Cargo.toml
building-blocks/tokio_chats/src/: main.rs
building-blocks/websocket01/: Cargo.toml
building-blocks/websocket02/: Cargo.toml
building-blocks/websocket02/src/: main.rs
linkred2/: Cargo.toml
linkred2/src/: lib.rs  result.rs  server.rs
