[package]
name = "bb1"
version = "0.1.0"
authors = ["chendan <chendan@tenxcloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.5.1"
bson = "0.13"