[package]
name = "examples"
version = "0.1.0"
authors = ["chendan <doke.hi@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2.4"
actix-web = { version="1.0.5", features=["ssl"] }
tokio = "0.1.22"
futures = "0.1.28"
bytes = "0.4.12"
log =  { version = "0.4.7", features = ["release_max_level_error", "max_level_debug"] }
env_logger = "0.6.2"
lazy_static = "1.3.0"
resp = { git = "https://github.com/creativcoder/resp" }
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
validator = "0.9.0"
validator_derive = "0.9.0"

[[bin]]
path = "src/hello_world.rs"
name = "hello-world"

[[bin]]
path = "src/read_exact_write_all.rs"
name = "read_exact_write_all"

[[bin]]
path = "src/echo.rs"
name = "echo"

[[bin]]
path = "src/proxy.rs"
name = "proxy"

[[bin]]
path = "src/chat.rs"
name = "chat"

[[bin]]
path = "src/double_server.rs"
name = "double_server"

[[bin]]
name = "spawn"
path = "src/spawn.rs"

[[bin]]
name = "log_facade"
path = "src/log_facade.rs"

[[bin]]
name = "redis-server"
path = "src/redis-server.rs"

[[bin]]
name = "async_ex1"
path = "src/async_ex1.rs"